@@ -169,6 +169,7 @@ __objc_class_name_NSTimeZone
 __objc_class_name_NSTimeZoneDetail
 __objc_class_name_NSTimer
 __objc_class_name_NSURL
+__objc_class_name_GSFileURLHandle
 __objc_class_name_NSURLHandle
 __objc_class_name_NSUnarchiver
 __objc_class_name_NSUnarchiverClassInfo
